--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -5,7 +5,7 @@ header {
     font-weight: bold;
     display: flex;
     flex-direction: column;
-    background: url('../../../images/p-9.jpg') no-repeat center/cover;
+    background: url('../../../images/nature-1.jpg') no-repeat center/cover;
     //opacity: 0.4;
 
     .logo{
@@ -17,7 +17,7 @@ header {
     .header-content {
         align-self: center;
         margin-top: 8rem;
-        color: white;
+        //color: white;
         display: flex;
         flex-direction: column;
         justify-content: center;
