--- a/assets/sass/layout/_navbar.scss
+++ b/assets/sass/layout/_navbar.scss
@@ -16,7 +16,7 @@ nav{
 
             a{
                 text-decoration: none;
-                color: white;
+                color: black;
 
             &:hover{
                 color: white
