--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,7 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap');
 @import 'libs/vars';
 
 // Base.
-
 @import 'base/reset';
 @import 'base/page';
 //@import 'base/typography';
