--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -121,7 +121,6 @@ html {
   text-transform: uppercase; }
 
 main .intro {
-  padding: 2rem 15rem;
   display: flex;
   gap: 5rem;
   margin-bottom: 2rem;
@@ -135,5 +134,27 @@ main .intro {
     justify-content: center;
     align-items: center;
     text-align: center; }
+main .parallax {
+  margin: 4rem 0;
+  min-height: 400px;
+  background: url("../../../images/pexels-cotton.jpg");
+  position: relative;
+  opacity: 0.9;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  main .parallax .parallax-text {
+    color: white;
+    text-align: center;
+    line-height: 1.5;
+    padding: 0 20rem;
+    font-size: 1.5rem;
+    font-weight: bold; }
+main .contact {
+  height: 70vh; }
 
 /*# sourceMappingURL=main.css.map */
