--- a/assets/sass/layout/_main.scss
+++ b/assets/sass/layout/_main.scss
@@ -23,6 +23,7 @@ main{
 
     .intro {
         // padding: 2rem 15rem;
+        margin-top: 2rem;
         display: flex;
         gap:5rem;
         margin-bottom: 2rem;
@@ -62,7 +63,7 @@ main{
             padding:0 20rem;
             font-size: 1.5rem;
             font-weight: bold;
-            
+            text-shadow: 1px 1px black;
         }
     }
 
