Set the images for intro

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -107,8 +107,8 @@ html {
   scroll-behavior: smooth; }
 
 .alert {
-  position: relative;
-  bottom: 15rem;
+  position: absolute;
+  bottom: 5rem;
   left: 15rem;
   width: 18rem;
   height: 18rem;
@@ -121,10 +121,10 @@ html {
   text-transform: uppercase; }
 
 main .intro {
-  margin-top: 2rem;
   display: flex;
+  margin-top: 6rem;
   gap: 5rem;
-  margin-bottom: 2rem;
+  margin-bottom: 3rem;
   justify-content: center;
   align-items: center; }
   main .intro-sub {
@@ -135,6 +135,9 @@ main .intro {
     justify-content: center;
     align-items: center;
     text-align: center; }
+    main .intro-sub img {
+      width: 200px;
+      height: 200px; }
 main .parallax {
   margin: 4rem 0;
   min-height: 400px;
