--- a/assets/sass/layout/_main.scss
+++ b/assets/sass/layout/_main.scss
@@ -3,8 +3,8 @@ html {
   }
 
 .alert {
-    position:relative;
-    bottom:15rem;
+    position: absolute;
+    bottom:5rem;
     left: 15rem;
    // z-index: 1;
     width: 18rem;
@@ -23,10 +23,10 @@ main{
 
     .intro {
         // padding: 2rem 15rem;
-        margin-top: 2rem;
         display: flex;
+        margin-top: 6rem;
         gap:5rem;
-        margin-bottom: 2rem;
+        margin-bottom: 3rem;
         justify-content:center;
         align-items:center;
 
@@ -39,6 +39,11 @@ main{
             justify-content: center;
             align-items: center;
             text-align: center;
+
+            img{
+                width:200px;
+                height:200px;
+            }
         }
     }
 
