--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,700;1,500&display=swap");
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
 pre, a, abbr, acronym, address, big, cite,
@@ -63,6 +63,9 @@ html {
 *, *:before, *:after {
   box-sizing: inherit; }
 
+body {
+  font-family: 'Montserrat', sans-serif; }
+
 nav {
   display: flex;
   justify-content: space-between;
@@ -122,22 +125,23 @@ html {
 
 main .intro {
   display: flex;
-  margin-top: 6rem;
-  gap: 5rem;
+  margin-top: 7rem;
+  gap: 3rem;
   margin-bottom: 3rem;
   justify-content: center;
   align-items: center; }
   main .intro-sub {
-    width: 10rem;
+    width: 12rem;
     line-height: 1.5;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    text-align: center; }
+    align-items: space-between; }
     main .intro-sub img {
-      width: 200px;
-      height: 200px; }
+      width: 250px;
+      height: auto; }
+    main .intro-sub p {
+      text-align: center; }
 main .parallax {
   margin: 4rem 0;
   min-height: 400px;
