--- a/assets/sass/layout/_main.scss
+++ b/assets/sass/layout/_main.scss
@@ -24,27 +24,33 @@ main{
     .intro {
         // padding: 2rem 15rem;
         display: flex;
-        margin-top: 6rem;
-        gap:5rem;
+        margin-top: 7rem;
+        gap:3rem;
         margin-bottom: 3rem;
         justify-content:center;
         align-items:center;
 
 
         &-sub {
-            width: 10rem;
+            // gap:2rem;
+            width: 12rem;
             line-height: 1.5;
             display: flex;
             flex-direction: column;
             justify-content: center;
-            align-items: center;
-            text-align: center;
+            align-items: space-between;
 
             img{
-                width:200px;
-                height:200px;
+                width:250px;
+                height:auto;
+            }
+
+            p{
+                text-align: center;
             }
         }
+       
+
     }
 
     .parallax{
