--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -129,16 +129,19 @@ main .intro {
   gap: 3rem;
   margin-bottom: 3rem;
   justify-content: center;
-  align-items: center; }
+  align-items: flex-start; }
   main .intro-sub {
-    width: 12rem;
+    width: 15rem;
     line-height: 1.5;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: space-between; }
+    main .intro-sub .img-container {
+      width: 100%;
+      height: 40%; }
     main .intro-sub img {
-      width: 250px;
+      width: 100%;
       height: auto; }
     main .intro-sub p {
       text-align: center; }
