--- a/assets/sass/layout/_main.scss
+++ b/assets/sass/layout/_main.scss
@@ -28,20 +28,25 @@ main{
         gap:3rem;
         margin-bottom: 3rem;
         justify-content:center;
-        align-items:center;
+        align-items:flex-start;
 
 
         &-sub {
             // gap:2rem;
-            width: 12rem;
+            width: 15rem;
             line-height: 1.5;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: space-between;
 
+            .img-container {
+                width: 100%;
+                height: 40%;
+            }
+
             img{
-                width:250px;
+                width:100%;
                 height:auto;
             }
 
