--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -10,7 +10,7 @@ header {
 
     .logo{
         width:100px;
-        height: 100px;
+        height: auto;
         //border-radius: 50%;
     }
 
