--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -8,6 +8,7 @@
 
 
     @import 'layout/bg';
+    @import 'layout/navbar';
 	@import 'layout/headerContainer';
     @import 'layout/main';
 	@import 'layout/footer';
