--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -91,40 +91,15 @@ nav {
   width: 100%;
   z-index: 999999999; }
 
-nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1rem 15rem;
-  background: white; }
-  nav ul {
-    list-style: none; }
-    nav ul li {
-      display: inline-block;
-      margin: 0 1rem;
-      cursor: pointer; }
-      nav ul li a {
-        text-decoration: none;
-        color: black;
-        font-weight: bold; }
-  nav .logo {
-    width: 100px;
-    height: auto; }
-
-.sticky {
-  position: fixed;
-  width: 100%;
-  z-index: 999999999; }
-
 header {
   min-height: 90vh;
   font-weight: bold;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
   background: url("../../../images/nature-1.jpg") no-repeat center/cover; }
   header .header-content {
-    align-self: center;
-    margin-top: 8rem;
+    margin-top: 15rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
