--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -11,4 +11,6 @@
     @import 'layout/navbar';
 	@import 'layout/headerContainer';
     @import 'layout/main';
+    @import 'components/form';
+    @import 'components/button';
 	@import 'layout/footer';
