--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -1,8 +1,13 @@
 footer {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
     width: 100%;
+    min-height: 5rem;
     max-width: 100%;
-    margin: 2rem 0;
+    margin-top: 4rem;
     text-align: center;
+    background: rgba(221,217,231, 0.3);
 
     .copyright {
         letter-spacing: 0.4rem;
@@ -11,6 +16,22 @@ footer {
         margin-bottom: 0;
         text-transform: uppercase;
         font-weight: 550;
+    }
+
+    .socials {
+        display: flex;
+        gap: 1rem;
+        
+        i {
+            font-size: 2rem;
+            color: rgb(77, 139, 128)
+
+        }
+    }
+
+    img {
+        width: 5rem;
+        height: auto;
     }
 
 }
