--- a/assets/sass/layout/_main.scss
+++ b/assets/sass/layout/_main.scss
@@ -2,6 +2,19 @@ html {
     scroll-behavior: smooth;
   }
 
+  @mixin heading-style {
+    text-align: left;
+    font-size: 2rem;
+    text-transform: uppercase;
+    font-weight: bold;
+  }
+
+  @mixin paragraph-style {
+    line-height: 1.5;
+    width: 30rem;
+  }
+  
+
 .alert {
     position: absolute;
     bottom:0rem;
@@ -25,9 +38,10 @@ main{
 
     .intro {
         display: flex;
-        margin-top: 7rem;
+        margin-top: 3rem;
+        padding-top: 7rem;
         gap:3rem;
-        margin-bottom: 3rem;
+        margin-bottom: 4rem;
         justify-content:center;
         align-items:flex-start;
 
@@ -52,7 +66,7 @@ main{
     }
 
     .parallax{
-        margin: 4rem 0;
+        margin-top: 4rem;
         min-height: 400px;
         background: url('../../../images/pexels-cotton.jpg');
         position: relative;
@@ -77,7 +91,8 @@ main{
     }
 
     .trivia {
-        margin: 7rem 0;
+        background: rgba(221,217,231, 0.4);
+        padding: 7rem 0;
         display:flex;
         justify-content: center;
         align-items: center;
@@ -104,21 +119,33 @@ main{
             width: 30%;
 
             h3 {
-                text-align: left;
-                font-size: 2rem;
-                text-transform: uppercase;
-                font-weight: bold;
+                @include heading-style;
             }
 
             p {
-                line-height: 1.5;
-                width: 30rem;
+                @include paragraph-style;
             }
         }
     }
 
     .contact{
-        height:70vh;
+        display:flex;
+        gap: 2rem;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        margin: 3rem;
+        
+        h3 {
+            @include heading-style;
+        }
+
+        p {
+            @include paragraph-style;
+        }
+
+        
+
         
     }
 }
