Added padding to input fields and made button text uppercase

--- a/assets/sass/components/_form.scss
+++ b/assets/sass/components/_form.scss
@@ -18,10 +18,11 @@ form {
             text-transform: uppercase;
         }
 
-        input , textarea {
+        input, textarea {
             width: 35rem;
             border: none;
             background: rgba(221,217,231, 0.3);
+            padding-left: 1rem;
         }
 
         input {
@@ -30,6 +31,7 @@ form {
 
         textarea {
             height: 10rem;
+            padding-top: 1rem;
         }
     }
 }
