--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -236,11 +236,13 @@ form {
     form .fields input, form .fields textarea {
       width: 35rem;
       border: none;
-      background: rgba(221, 217, 231, 0.3); }
+      background: rgba(221, 217, 231, 0.3);
+      padding-left: 1rem; }
     form .fields input {
       height: 2.5rem; }
     form .fields textarea {
-      height: 10rem; }
+      height: 10rem;
+      padding-top: 1rem; }
 
 .primary {
   width: 10rem;
@@ -250,7 +252,9 @@ form {
   border: none;
   font-weight: bold;
   border-radius: 1rem;
-  background: rgba(77, 139, 128, 0.5); }
+  background: rgba(77, 139, 128, 0.5);
+  text-transform: uppercase;
+  cursor: pointer; }
 
 footer {
   display: flex;
