--- a/assets/sass/components/_button.scss
+++ b/assets/sass/components/_button.scss
@@ -6,5 +6,7 @@
     border: none;
     font-weight: bold;
     border-radius: 1rem;
-    background: rgba(77, 139, 128, 0.5)
+    background: rgba(77, 139, 128, 0.5);
+    text-transform: uppercase;
+    cursor: pointer;
 }
