Added margin top for input fields

--- a/assets/sass/components/_form.scss
+++ b/assets/sass/components/_form.scss
@@ -19,6 +19,7 @@ form {
         }
 
         input, textarea {
+            margin-top: 0.2rem;
             width: 35rem;
             border: none;
             background: rgba(221,217,231, 0.3);
