--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -234,6 +234,7 @@ form {
       line-height: 1.5;
       text-transform: uppercase; }
     form .fields input, form .fields textarea {
+      margin-top: 0.2rem;
       width: 35rem;
       border: none;
       background: rgba(221, 217, 231, 0.3);
