--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,700;1,500&display=swap');
 @import 'libs/vars';
+@import 'libs/breakpoints';
 
 // Base.
 @import 'base/reset';
