--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -259,6 +259,7 @@ form {
 
 footer {
   display: flex;
+  flex-direction: row;
   justify-content: space-around;
   align-items: center;
   width: 100%;
@@ -283,5 +284,18 @@ footer {
   footer img {
     width: 5rem;
     height: auto; }
+  @media (max-width: 768px) {
+    footer {
+      flex-direction: column;
+      padding-block: 1rem;
+      gap: 2rem; }
+      footer .copyright {
+        order: 2; }
+      footer .socials {
+        gap: 1rem; }
+        footer .socials i {
+          font-size: 1.5rem; }
+      footer img {
+        width: 3.5rem; } }
 
 /*# sourceMappingURL=main.css.map */
