--- a/assets/sass/components/_form.scss
+++ b/assets/sass/components/_form.scss
@@ -2,6 +2,7 @@ form {
     border: 0.1rem solid rgb(77, 139, 128);
     border-radius: 2rem;
     padding: 3rem;
+    width: 35%;
 
     .fields {
         display: flex;
@@ -20,7 +21,7 @@ form {
 
         input, textarea {
             margin-top: 0.2rem;
-            width: 35rem;
+             width: 100%;
             border: none;
             background: rgba(221,217,231, 0.3);
             padding-left: 1rem;
@@ -35,4 +36,21 @@ form {
             padding-top: 1rem;
         }
     }
+
+    @include rwd(1500px){
+        width: 50%;
+    }
+    @include xl {
+        width: 80%;
+    }
+
+    @include sm {
+        width: 90%;
+        padding: 1.5rem;
+        border-radius: 1.5rem;
+    }
+
+    
+
+    
 }
