--- a/assets/sass/libs/_breakpoints.scss
+++ b/assets/sass/libs/_breakpoints.scss
@@ -1,34 +1,34 @@
 // Small devices
 @mixin sm {
-    @media (max-width: #{$screen-sm-min}) {
+    @media (max-width: #{$screen-sm-max}) {
         @content;
     }
  }
  
  // Medium devices
  @mixin md {
-    @media (max-width: #{$screen-md-min}) {
+    @media (max-width: #{$screen-md-max}) {
         @content;
     }
  }
  
  // Large devices
  @mixin lg {
-    @media (max-width: #{$screen-lg-min}) {
+    @media (max-width: #{$screen-lg-max}) {
         @content;
     }
  }
  
  // Extra large devices
  @mixin xl {
-    @media (min-width: #{$screen-xl-min}) {
+    @media (max-width: #{$screen-xl-max}) {
         @content;
     }
  }
 
  //custom mixin for any width
  @mixin rwd($screen) {
-    @media (min-width: $screen) {
+    @media (max-width: $screen) {
         @content;
     }
  }
