--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -1,11 +1,11 @@
 // Small tablets and large smartphones (landscape view)
-$screen-sm-min: 576px;
+$screen-sm-max: 576px;
 
 // Small tablets (portrait view)
-$screen-md-min: 768px;
+$screen-md-max: 768px;
 
 // Tablets and small desktops
-$screen-lg-min: 992px;
+$screen-lg-max: 992px;
 
 // Large tablets and desktops
-$screen-xl-min: 1200px;
+$screen-xl-max: 1200px;
