Alert box is now responsive

--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -6,6 +6,10 @@ header {
     align-items: flex-start;
     background: url('../../../images/nature-1.jpg') no-repeat center/cover;
 
+    // @include lg{
+    //     background-position: center/cover ;
+    // }
+
     .header-content {
         margin-top: 15rem;
         display: flex;
