--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -126,7 +126,30 @@ html {
   justify-content: center;
   align-items: center;
   font-weight: 700;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  line-height: 1.5; }
+  @media (max-width: 1200px) {
+    .alert {
+      width: 15rem;
+      height: 15rem;
+      text-align: center;
+      bottom: 2rem; } }
+  @media (max-width: 992px) {
+    .alert {
+      left: 8rem; } }
+  @media (max-width: 650px) {
+    .alert {
+      width: 12rem;
+      height: 12rem;
+      bottom: 5rem;
+      left: 4rem; } }
+  @media (max-width: 420px) {
+    .alert {
+      width: 10rem;
+      height: 10rem;
+      bottom: 5rem;
+      left: 2rem;
+      font-size: 0.7rem; } }
 
 .move {
   bottom: 5rem; }
