--- a/assets/sass/layout/_main.scss
+++ b/assets/sass/layout/_main.scss
@@ -34,8 +34,35 @@ html {
     display: flex;
     justify-content: center;
     align-items: center;
-   font-weight: 700;
+    font-weight: 700;
     text-transform: uppercase;
+    line-height: 1.5;
+
+    @include xl{
+        width: 15rem;
+        height: 15rem;
+        text-align: center;
+        bottom:2rem;
+    }
+
+    @include lg{
+        left: 8rem;  
+    }
+
+    @include rwd(650px){
+        width: 12rem;
+        height: 12rem;
+        bottom:5rem;
+        left: 4rem;  
+    }
+
+    @include rwd(420px){
+        width: 10rem;
+        height: 10rem;
+        bottom:5rem;
+        left: 2rem;  
+        font-size: 0.7rem;
+    }
 }
 
 .move{
