Header height remains same

--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -24,7 +24,7 @@ header {
         }
     }
 
-    @include rwd(600px){
-        min-height: 70vh;
-    }
+    // @include rwd(600px){
+    //     min-height: 70vh;
+    // }
 }
