--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -82,14 +82,46 @@ nav {
         text-decoration: none;
         color: black;
         font-weight: bold; }
+    @media (max-width: 768px) {
+      nav ul {
+        display: none; } }
   nav .logo {
     width: 100px;
     height: auto; }
+  nav .mobile-menu .mobile-menu-icon {
+    display: flex;
+    flex-direction: column;
+    gap: 0.4rem;
+    background: rgba(221, 217, 231, 0.3);
+    padding: 0.5rem;
+    border-radius: 0.5rem; }
+    nav .mobile-menu .mobile-menu-icon hr {
+      width: 1.5rem;
+      margin: 0;
+      height: 0.1rem; }
+  @media (max-width: 768px) {
+    nav .mobile-menu {
+      display: block; } }
+  @media (max-width: 1200px) {
+    nav {
+      padding: 1rem 8rem; } }
+  @media (max-width: 992px) {
+    nav {
+      padding: 1rem 6rem; } }
+  @media (max-width: 576px) {
+    nav {
+      padding: 1rem 3rem; } }
 
 .sticky {
   position: fixed;
   width: 100%;
   z-index: 999999999; }
+
+.show {
+  display: block; }
+
+.hidden {
+  display: none; }
 
 header {
   min-height: 90vh;
@@ -110,9 +142,6 @@ header {
     header .header-content h2 {
       line-height: 1.5;
       text-align: center; }
-  @media (max-width: 600px) {
-    header {
-      min-height: 70vh; } }
 
 .header-container {
   clip-path: polygon(0 0, 100% 0, 100% 90%, 90% 100%, 0 80%); }
@@ -142,23 +171,26 @@ html {
       bottom: 2rem; } }
   @media (max-width: 992px) {
     .alert {
-      left: 8rem; } }
+      left: 8rem;
+      bottom: 1rem; } }
   @media (max-width: 600px) {
     .alert {
       width: 12rem;
       height: 12rem;
-      bottom: 15rem;
       left: 4rem; } }
-  @media (max-width: 420px) {
+  @media (max-width: 400px) {
     .alert {
       width: 10rem;
       height: 10rem;
-      bottom: 20rem;
+      bottom: -2rem;
       left: 2rem;
       font-size: 0.7rem; } }
 
 .move {
   bottom: 5rem; }
+
+.move-mobile {
+  bottom: 0rem; }
 
 main .intro {
   display: flex;
