Menu is now responsive

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -66,51 +66,75 @@ html {
 body {
   font-family: 'Montserrat', sans-serif; }
 
-nav {
+#navbar {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1rem 15rem;
-  background: white; }
-  nav ul {
-    list-style: none; }
-    nav ul li {
-      display: inline-block;
-      margin: 0 1rem;
-      cursor: pointer; }
-      nav ul li a {
-        text-decoration: none;
-        color: black;
-        font-weight: bold; }
-    @media (max-width: 768px) {
-      nav ul {
-        display: none; } }
-  nav .logo {
-    width: 100px;
-    height: auto; }
-  nav .mobile-menu .mobile-menu-icon {
+  flex-direction: column; }
+  #navbar .primary-nav {
     display: flex;
-    flex-direction: column;
-    gap: 0.4rem;
-    background: rgba(221, 217, 231, 0.3);
-    padding: 0.5rem;
-    border-radius: 0.5rem; }
-    nav .mobile-menu .mobile-menu-icon hr {
-      width: 1.5rem;
-      margin: 0;
-      height: 0.1rem; }
-  @media (max-width: 768px) {
-    nav .mobile-menu {
-      display: block; } }
-  @media (max-width: 1200px) {
-    nav {
-      padding: 1rem 8rem; } }
-  @media (max-width: 992px) {
-    nav {
-      padding: 1rem 6rem; } }
-  @media (max-width: 576px) {
-    nav {
-      padding: 1rem 3rem; } }
+    justify-content: space-between;
+    align-items: center;
+    padding: 0rem 12rem;
+    background: white;
+    width: 100%; }
+    #navbar .primary-nav .links {
+      list-style: none; }
+      #navbar .primary-nav .links li {
+        display: inline-block;
+        margin: 0 1rem;
+        cursor: pointer; }
+        #navbar .primary-nav .links li a {
+          text-decoration: none;
+          color: black;
+          font-weight: bold; }
+      @media (max-width: 768px) {
+        #navbar .primary-nav .links {
+          display: none; } }
+    #navbar .primary-nav .logo {
+      width: 100px;
+      height: auto; }
+    #navbar .primary-nav .mobile-menu-button {
+      display: none; }
+      #navbar .primary-nav .mobile-menu-button .mobile-menu-icon {
+        display: flex;
+        flex-direction: column;
+        gap: 0.4rem;
+        background: rgba(221, 217, 231, 0.3);
+        padding: 0.5rem;
+        border-radius: 0.5rem; }
+        #navbar .primary-nav .mobile-menu-button .mobile-menu-icon hr {
+          width: 1.5rem;
+          margin: 0;
+          height: 0.1rem; }
+      @media (max-width: 768px) {
+        #navbar .primary-nav .mobile-menu-button {
+          display: block; } }
+    @media (max-width: 1200px) {
+      #navbar .primary-nav {
+        padding: 0rem 8rem; } }
+    @media (max-width: 992px) {
+      #navbar .primary-nav {
+        padding: 0rem 6rem; } }
+    @media (max-width: 768px) {
+      #navbar .primary-nav {
+        padding: 0rem 3rem; } }
+  #navbar .secondary-nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: white;
+    padding: 1rem 0; }
+    #navbar .secondary-nav .mobile-links-list {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 1rem; }
+      #navbar .secondary-nav .mobile-links-list li {
+        display: block; }
+        #navbar .secondary-nav .mobile-links-list li a {
+          text-decoration: none;
+          color: black;
+          font-weight: bold; }
 
 .sticky {
   position: fixed;
@@ -121,7 +145,8 @@ nav {
   display: block; }
 
 .hidden {
-  display: none; }
+  display: none;
+  transition: all 1s ease-out; }
 
 header {
   min-height: 90vh;
@@ -148,6 +173,9 @@ header {
 
 html {
   scroll-behavior: smooth; }
+  html main {
+    display: flex;
+    flex-direction: column; }
 
 .alert {
   position: absolute;
@@ -304,7 +332,8 @@ main .contact {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin: 3rem; }
+  padding-top: 7rem;
+  padding-bottom: 3.5rem; }
   main .contact h3 {
     text-align: left;
     font-size: 2rem;
@@ -315,7 +344,7 @@ main .contact {
     width: 30rem; }
   @media (max-width: 576px) {
     main .contact {
-      margin: 5rem 1rem; }
+      margin: 2rem 1rem; }
       main .contact h3 {
         font-size: 1.5rem; }
       main .contact p {
