--- a/assets/sass/layout/_navbar.scss
+++ b/assets/sass/layout/_navbar.scss
@@ -1,69 +1,112 @@
-nav{
-    display:flex;
-    justify-content:space-between;
-    align-items:center;
-    padding: 1rem 15rem;
-    background: white;
-    
-    ul{
-        list-style: none;
-        li{
-            display:inline-block;
-            margin: 0 1rem;
-            cursor: pointer;
+@mixin anchorTag-style {
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+}
 
-            a{
-                text-decoration: none;
-                color: black;
-                font-weight: bold;
+#navbar {
 
+    display: flex;
+    flex-direction: column;
+
+    .primary-nav {
+        display:flex;
+        justify-content:space-between;
+        align-items:center;
+        padding: 0rem 12rem;
+        background: white;
+        width: 100%;
+        
+        .links {
+            list-style: none;
+            li {
+                display:inline-block;
+                margin: 0 1rem;
+                cursor: pointer;
+
+                a {
+                    @include anchorTag-style;
+
+                }
+            }
+
+            @include md {
+                display: none;
             }
         }
 
-        @include md {
+        .logo{
+            width:100px;
+            height: auto;
+        }
+
+        .mobile-menu-button {
             display: none;
-        }
-    }
 
-    .logo{
-        width:100px;
-        height: auto;
-    }
-
-    .mobile-menu {
-        .mobile-menu-icon {
-            display: flex;
-            flex-direction: column;
-            gap: 0.4rem;
-            background: rgba(221,217,231, 0.3);
-            padding: 0.5rem;
-            border-radius: 0.5rem;
-    
-            hr {
-                width: 1.5rem;
-                margin: 0;
-                height: 0.1rem;
+            .mobile-menu-icon {
+                display: flex;
+                flex-direction: column;
+                gap: 0.4rem;
+                background: rgba(221,217,231, 0.3);
+                padding: 0.5rem;
+                border-radius: 0.5rem;
+        
+                hr {
+                    width: 1.5rem;
+                    margin: 0;
+                    height: 0.1rem;
+                }
             }
+
+            @include md {
+                display: block;
+            }   
         }
 
+        @include xl {
+            padding: 0rem 8rem;
+        }
+    
+        @include lg {
+            padding: 0rem 6rem;
+        }
+    
         @include md {
-            display: block;
+            padding: 0rem 3rem;
         }
+
+        
+    }
+    
+    .secondary-nav {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: white;
+        padding: 1rem 0;
+    
+       .mobile-links-list {
+           display: flex;
+           flex-direction: column;
+           justify-content: center;
+           align-items: center;
+           gap: 1rem;
+    
+           li {
+               display: block;
+    
+               a {
+                @include anchorTag-style;
+               }
+           }
+       }
     }
 
-    @include xl {
-        padding: 1rem 8rem;
-    }
-
-    @include lg {
-        padding: 1rem 6rem;
-    }
-
-    @include sm {
-        padding: 1rem 3rem;
-    }
+   
     
 }
+
+
 
 .sticky {
     position: fixed;
@@ -77,5 +120,6 @@ nav{
 
 .hidden {
     display: none;
+    transition: all 1s ease-out;
 }
 
