--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -185,7 +185,7 @@ html {
 
 .alert {
   position: absolute;
-  bottom: 0rem;
+  bottom: 3rem;
   left: 15rem;
   width: 18rem;
   height: 18rem;
@@ -201,24 +201,20 @@ html {
     .alert {
       width: 15rem;
       height: 15rem;
-      text-align: center;
-      bottom: 2rem; } }
+      text-align: center; } }
   @media (max-width: 992px) {
     .alert {
       left: 8rem;
-      bottom: 1rem; } }
-  @media (max-width: 600px) {
+      bottom: 10rem; } }
+  @media (max-width: 768px) {
+    .alert {
+      bottom: 5rem; } }
+  @media (max-width: 576px) {
     .alert {
       width: 12rem;
       height: 12rem;
+      bottom: 3rem;
       left: 4rem; } }
-  @media (max-width: 400px) {
-    .alert {
-      width: 10rem;
-      height: 10rem;
-      bottom: -2rem;
-      left: 2rem;
-      font-size: 0.7rem; } }
 
 .move {
   bottom: 5rem; }
