--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -173,6 +173,12 @@ header {
     header .header-content h2 {
       line-height: 1.5;
       text-align: center; }
+    @media (max-width: 768px) and (orientation: landscape) {
+      header .header-content {
+        margin: 8rem 1rem 0 1rem; } }
+    @media (max-width: 992px) and (orientation: landscape) {
+      header .header-content {
+        margin: 6rem 1rem 0 1rem; } }
 
 .header-container {
   clip-path: polygon(0 0, 100% 0, 100% 90%, 90% 100%, 0 80%); }
@@ -201,7 +207,8 @@ html {
     .alert {
       width: 15rem;
       height: 15rem;
-      text-align: center; } }
+      text-align: center;
+      bottom: 0rem; } }
   @media (max-width: 992px) {
     .alert {
       left: 8rem;
@@ -212,6 +219,16 @@ html {
   @media (max-width: 768px) {
     .alert {
       bottom: 5rem; } }
+  @media (max-width: 768px) and (orientation: landscape) {
+    .alert {
+      bottom: -1.5rem;
+      width: 10rem;
+      height: 10rem; } }
+  @media (max-width: 992px) and (orientation: landscape) {
+    .alert {
+      bottom: 1rem;
+      width: 10rem;
+      height: 10rem; } }
   @media (max-width: 576px) {
     .alert {
       width: 12rem;
