--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -22,6 +22,14 @@ header {
             line-height: 1.5;
             text-align: center;
         }
+
+        @include md-portrait{
+            margin: 8rem 1rem 0 1rem;
+        }
+
+        @include lg-portrait{
+            margin: 6rem 1rem 0 1rem;
+        }
     }
 
     // @include rwd(600px){
