Background image for header replaced with color, h1 size increased

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -160,7 +160,7 @@ header {
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  background: url("../../../images/nature-1.jpg") no-repeat center/cover; }
+  background: rgba(77, 139, 128, 0.5); }
   header .header-content {
     margin: 15rem 1rem 0 1rem;
     display: flex;
@@ -168,7 +168,7 @@ header {
     justify-content: center;
     align-items: center; }
     header .header-content h1 {
-      font-size: 3em;
+      font-size: 3.5rem;
       margin-bottom: 1rem; }
     header .header-content h2 {
       line-height: 1.5;
