--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -4,7 +4,8 @@ header {
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    background: url('../../../images/nature-1.jpg') no-repeat center/cover;
+    // background: url('../../../images/nature-1.jpg') no-repeat center/cover;
+    background: rgba(77, 139, 128, 0.5);
 
     .header-content {
         margin: 15rem 1rem 0 1rem;
@@ -14,7 +15,7 @@ header {
         align-items: center;
 
         h1{
-            font-size: 3em;
+            font-size: 3.5rem;
             margin-bottom: 1rem;
         }
 
